moved helper function in to server script

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,7 @@ export(runCatch)
 export(server)
 export(ui)
 import(shiny)
+importFrom(leaflet,clearGroup)
+importFrom(leaflet,leafletProxy)
 importFrom(magrittr,"%>%")
 importFrom(shiny,observeEvent)
