--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,11 @@ export(runCatch)
 export(server)
 export(ui)
 import(shiny)
+importFrom(leaflet,addCircleMarkers)
+importFrom(leaflet,addPolygons)
+importFrom(leaflet,addPolylines)
 importFrom(leaflet,clearGroup)
 importFrom(leaflet,leafletProxy)
+importFrom(leaflet,removeShape)
 importFrom(magrittr,"%>%")
 importFrom(shiny,observeEvent)
